# pyGeoDataCrawler

./: ..map  .gitignore  .gitlab-ci.yml  .releaserc.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  index.yml  pyproject.toml  setup.py
.github/workflows/: docker-image.yml
demo/: bdod_0-5cm_mean_5000.yaml  cfvo_0-5cm_mean_5000.style  index.yaml  index.yml  line.shp  line.shx  point.dbf  point.shp  point.shx  point.yaml  polygon.dbf  polygon.shp  polygon.yaml  raster.tif.aux.xml  raster.yaml
demo/csv/lin/: index.csv  index.j2
demo/csv/win/: index.csv  index.j2
demo/grid/: 00002_mod.tif  00002_mod.tif.aux.xml  00003.tif  era5-temperature_2m.tif  era5-temperature_2m.tif.aux.xml  home.png.aux.xml
demo/map/: 00002.tif  00002.yml  index.yml  line.yml  marine_areas.geojson  marine_areas.yml
demo/nested/: raster2.yaml
demo/various/: aSimpleExcel.xlsx  kenya-soil.gpkg  kenya_continental_shelf_2019.dbf  kenya_continental_shelf_2019.shp  kenya_continental_shelf_2019.shx
demo/various/afd2620509d441d5b3d4f3dcd6ae75b5.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtable  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByName.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.CatRelTypesByUUID.atx  a00000007.gdbtable  a00000007.gdbtablx  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx  a0000000a.gdbtable  a0000000a.gdbtablx  timestamps
demo/vector/: cities.vrt  line.dbf  maize.tif  point.qix  polygon.shx
geodatacrawler/: __init__.py  etl.py  mapfile.py  metadata.py  upload.py  upload_wosis.py  utils.py
geodatacrawler/schemas/iso19139/: contact.j2  main.j2
geodatacrawler/templates/: PGM.tpl  class-point.tpl  class-polygon.tpl  class-raster.tpl  csv.j2  default.map  grid.html  layer.tpl
pyGeoDataCrawler/: import.py  mapfile.py  utils.py
pyGeoDataCrawler/templates/: class-line.tpl  class-raster.tpl  layer.tpl
src/geodatacrawler/: mapfile.py  metadata.py  utils.py
src/geodatacrawler/schemas/iso19139/: main.j2
src/geodatacrawler/templates/: PGM.tpl  default.map  index.sqlite
tests/: test_csv.py  test_geodatacrawler.py  test_mapfile.py  test_metadata.py  test_utils.py
