[tool.poetry]
name = "geodatacrawler"
version = "1.3.8"
license = "MIT"
description = "a crawler script to extract and author metadata of spatial datasets"
authors = ["Paul van Genuchten <genuchten@yahoo.com>"]
readme = "README.md"
repository = "https://github.com/pvgenuchten/pyGeoDataCrawler"
packages = [
    { include = "geodatacrawler" },
    { include = "geodatacrawler/templates/*" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
mappyfile = "^1.0.0"
GDAL = "^3.6.2"
# GDAL = "3.6.4"
pyproj = "^3.4.0"
OWSLib = "0.31.0"
pygeometa = "0.16.0"
Jinja2 = "^3.1.2"
jinja2-time = "^0.2.0"
bibtexparser = "^2.0.0b2"
pytest = "^7.4.0"
openpyxl = "^3.1.2"
Unidecode = "^1.3.8"
beautifulsoup4 = "^4.12.3"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
crawl-metadata = "geodatacrawler.metadata:indexDir"
crawl-maps = "geodatacrawler.mapfile:mapForDir"
crawl-etl = "geodatacrawler.etl:etl"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
